--- a/ProcFile
+++ b/ProcFile
@@ -1,1 +1,1 @@
-web: java -Dspring.profiles.active=default -Dserver.port=$PORT -jar target/*.war
+web: java -jar .\target\ejercicio-1.0-SNAPSHOT-jar-with-dependencies.jar 9001
