fix: add plugin in pom

--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,20 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>com.heroku.sdk</groupId>
+          <artifactId>heroku-maven-plugin</artifactId>
+          <version>0.4.4</version>
+          <configuration>
+              <jdkVersion>1.8</jdkVersion>
+              <!-- Use your own application name -->
+              <appName>tp-medio-ambiente</appName> 
+              <processTypes>
+                  <!-- You might have to remove the ./ in front   -->
+                  <web>java -jar .\target\ejercicio-1.0-SNAPSHOT-jar-with-dependencies.jar 5432</web>
+              </processTypes>
+          </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
