--- a/pom.xml
+++ b/pom.xml
@@ -238,7 +238,7 @@
               <appName>tp-medio-ambiente</appName> 
               <processTypes>
                   <!-- You might have to remove the ./ in front   -->
-                  <web>java -jar .\target\ejercicio-1.0-SNAPSHOT-jar-with-dependencies.jar 9000</web>
+                  <web>java -jar .\target\ejercicio-1.0-SNAPSHOT-jar-with-dependencies.jar</web>
               </processTypes>
           </configuration>
       </plugin>
